Style of index done with background image

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,13 +8,14 @@
 
   <style>
     header {
-      background-color: rgb(129, 6, 148);
+      background-color: rgb(41, 11, 124);
       color: white;
       display: flex;
       flex-direction: row;
       align-items: baseline;
       padding-left: 1em;
       padding-right: 1em;
+      font-size: 25px;
     }
     #home {
       margin-right: 1.5em;
