--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,12 @@ import Header from "../components/header.astro";
 			font-size:150px;
 			font-family: serif;
 			font-style: oblique;
+			background-color: rgba(147, 147, 246, 0.723);
+			padding: 5em;
+			padding: 100px;
+		}
+		body{
+			background-image:url(blue.png);
 		}
 	</style>
 </head>
