--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,10 +22,20 @@ import Header from "../components/header.astro";
 		body{
 			background-image:url(blue.png);
 		}
+		footer {
+			padding: 1em 0;
+			font-size: 25px;
+			color: black;
+			display: flex;
+			justify-content: flex-end;
+		}
 	</style>
 </head>
 <body>
 	<Header />
 	<h1>Quotes</h1>
+	<footer>
+		&copy; Senda Arriaga
+	</footer>
 </body>
 </html>
