--- a/src/pages/aleatory.astro
+++ b/src/pages/aleatory.astro
@@ -13,7 +13,7 @@ import AleatoryQuote from "../components/aleatory";
 <body>
     <Header />
     <h1>Aleatory</h1>
-    <AleatoryQuote/>
+    <AleatoryQuote client:load/>
     <footer>
         &copy; Senda Arriaga
     </footer>
