--- a/src/components/style/aleatory.css
+++ b/src/components/style/aleatory.css
@@ -32,9 +32,7 @@ body{
     background-color: rgba(147, 147, 246, 0.723);
 }
 footer {
-    padding: 1em 0;
-    font-size: 25px;
-    color: black;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    padding-top: 15em;
 }
