--- a/src/components/style/aleatory.css
+++ b/src/components/style/aleatory.css
@@ -9,11 +9,12 @@ body{
 .quote .title {
     display: flex;
     justify-content: center;
-    font-size:70px;
+    font-size: 70px;
     font-family: serif;
     font-style: oblique;
     background-color: rgba(147, 147, 246, 0.723);
     padding: 50px;
+    text-align: center;
 }
 .quote .author {
     display: flex;
