signup and signin examples

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,6 +4,8 @@
     </div>
     <a href="/search">Search</a>
     <a href="/aleatory">Aleatory</a>
+    <a href="/signup" class="SignUp">Sign Up</a>
+    <a href="/signin" class="SignIn">Sign In</a>
   </header>
 
   <style>
@@ -34,5 +36,6 @@
       box-sizing: border-box;
       background-color: rgba(255, 255, 255, 0.1);
     }
+    
   </style>
   
