--- a/src/components/style/signup.css
+++ b/src/components/style/signup.css
@@ -1,8 +1,5 @@
 body {
     background: #ffffff;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
   }
   
   form {
@@ -18,14 +15,6 @@ body {
     border-bottom: 1px solid rgb(79, 98, 148);
   }
   
-  p {
-    color: #bf1650;
-  }
-  
-  p::before {
-    display: inline;
-    content: "⚠ ";
-  }
   
   input {
     display: block;
@@ -76,11 +65,10 @@ body {
   input:disabled {
     opacity: 0.4;
   }
+  footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 15em;
+}
   
-  div {
-    text-align: center;
-    padding: 15px;
-    font-size: 18px;
-    font-weight: 100;
-  }
   
