--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,15 +1,10 @@
 ---
 import Header from "../components/header.astro";
 import QuoteSearch from "../components/search";
+import HeaderHTML from "../layouts/HeaderHTML.astro";
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Quote</title>
-</head>
+<HeaderHTML title="Aleatory Quote">
+</HeaderHTML>
 <body>
     <Header />
     <h1>Search</h1>
