Finishing SignIn & SignUp

--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -7,7 +7,7 @@ import HeaderHTML from "../layouts/HeaderHTML.astro";
 </HeaderHTML>
 <body>
     <Header />
-    <SignUp/>
+    <SignUp client:load/>
     <footer>
         &copy; Senda Arriaga
     </footer>
