--- a/src/components/style/signin.css
+++ b/src/components/style/signin.css
@@ -1,98 +1,49 @@
-body {
-  background: #ffffff;
-}
-
 .login-form {
-  max-width: 350px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background: #ffffff;
+  padding-top: 20px;
 }
 
-input[type="password"] {
-    height: 25px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-  }  
-  input {
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    border-radius: 4px;
-    border: 1px solid rgb(221, 218, 218);
-    padding: 10px 15px;
-    margin-bottom: 15px;
-    font-size: 14px;
-  }
+.title {
+  font-size: 25px;
+  text-align: center;
+}
+
+
+input {
+  display: flex;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  font-size: 14px;
+  height: 25px;
+}
   
-  label {
-    line-height: 2;
-    text-align: left;
-    display: block;
-    margin-bottom: 13px;
-    margin-top: 20px;
-    color: rgb(0, 0, 0);
-    font-size: 15px;
-    font-weight: 200;
-  }
+button {
+  background: #5a66a4;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 40px;
+  padding: 15px;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 5px;
+}
   
-  button {
-    background: #5a66a4;
-    color: white;
-    text-transform: uppercase;
-    border: none;
-    margin-top: 40px;
-    padding: 15px;
-    font-size: 16px;
-    font-weight: 100;
-    letter-spacing: 5px;
-  }
+button:hover {
+  cursor: pointer;
+  background: #4858aa;
+}
   
-  button:hover {
-    cursor: pointer;
-    background: #4858aa;
-  }
-  
-  button:active {
-    transition: 0.3s all;
-    transform: translateY(3px);
-    border: 1px solid transparent;
-    opacity: 0.8;
-  }
-  
-  input:disabled {
-    opacity: 0.4;
-  }
-  
-  .button-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .login-form {
-    background-color: white;
-    padding: 2rem;
-  }
-  
-  .list-container {
-    display: flex;
-  }
-  
-  .error {
-    color: red;
-    font-size: 12px;
-  }
-  
-  .title {
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .input-container {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    margin: 10px;
-  }
-  footer {
+.error {
+  color: red;
+  font-size: 12px;
+}
+
+footer {
     display: flex;
     justify-content: center;
     padding-top: 15em;
