--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -7,7 +7,7 @@ import HeaderHTML from "../layouts/HeaderHTML.astro";
 </HeaderHTML>
 <body>
     <Header />
-    <SignIn/>
+    <SignIn client:load/>
     <footer>
         &copy; Senda Arriaga
     </footer>
