home or your profile once you are logged in

--- a/src/components/style/signin.css
+++ b/src/components/style/signin.css
@@ -27,6 +27,7 @@ button {
   text-transform: uppercase;
   border: none;
   margin-top: 40px;
+  margin-left: 5px;
   padding: 15px;
   font-size: 16px;
   font-weight: 100;
@@ -41,6 +42,14 @@ button:hover {
 .error {
   color: red;
   font-size: 12px;
+}
+
+.succes {
+  padding-top: 30px;
+  color: green;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
