Cambiar ubi de las imagenes para Vercel

--- a/src/components/style/aleatory.css
+++ b/src/components/style/aleatory.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(cloud.jpg); 
+    background-image:url(/background/cloud.jpg); 
     background-size: cover;
    
 }
