--- a/src/components/style/search.css
+++ b/src/components/style/search.css
@@ -7,7 +7,7 @@ h1 {
     padding: 10px 0;
 }
 body{
-    background-image:url(blue.png); 
+    background-image:url(/background/blue.png); 
 } 
 .quote-search {
     background-color: #03a9f4e6;
