--- a/src/pages/style/index.css
+++ b/src/pages/style/index.css
@@ -9,7 +9,7 @@ h1 {
     padding: 100px;
 }
 body{
-    background-image:url(blue.png);
+    background-image:url(/background/blue.png);
 }
 footer {
     display: flex;
