--- a/src/pages/style/profile.css
+++ b/src/pages/style/profile.css
@@ -48,7 +48,7 @@ body{
     border-radius: 50%;
     margin: 38px auto 0 auto;
     background-size: cover;
-    background-image: url(profile.png);
+    background-image: url(/background/profile.png);
 }
 
 .job {
