Changing tittles and adding the webpage on readme

--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -4,7 +4,7 @@ import HeaderHTML from "../layouts/HeaderHTML.astro";
 import './style/profile.css';
 ---
 
-<HeaderHTML title="Profile">
+<HeaderHTML title="Your profile">
 </HeaderHTML>
 
 <body>
@@ -16,8 +16,7 @@ import './style/profile.css';
                 <div class="circle"></div>
                 <input type="text" id="user"></input>
                 <p class="job">user@hotmail.com</p>
-                <button class="btn">My plan</button>
-                <button class="btn">Modify</button>
+                <button class="btn">Modify Account</button>
             </div>
                 
             <div class="stats">
