--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -3,7 +3,7 @@ import Header from "../components/header.astro";
 import QuoteSearch from "../components/search";
 import HeaderHTML from "../layouts/HeaderHTML.astro";
 ---
-<HeaderHTML title="Aleatory Quote">
+<HeaderHTML title="Search Quote">
 </HeaderHTML>
 <body>
     <Header />
