--- a/src/pages/style/profile.css
+++ b/src/pages/style/profile.css
@@ -5,9 +5,6 @@ h1 {
     text-transform: uppercase;
 }
 
-body{
-    background-image:url(blue.png);
-}
 
 .frame {
     height: 400px;
@@ -16,6 +13,8 @@ body{
     font-family: 'Open Sans', Helvetica, sans-serif;
     display: flex;
     justify-content: center;
+    background-image: url(/background/flowers.jpg);
+    background-size: cover;
 }
 
 .center {
