--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Header from "../components/header.astro";
 import './style/index.css';
 import HeaderHTML from "../layouts/HeaderHTML.astro";
 ---
-<HeaderHTML title="Aleatory Quote">
+<HeaderHTML title="Home">
 </HeaderHTML>
 <body>
 	<Header />
