--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -3,7 +3,7 @@ import Header from "../components/header.astro";
 import SignIn from "../components/signin";
 import HeaderHTML from "../layouts/HeaderHTML.astro";
 ---
-<HeaderHTML title="Aleatory Quote">
+<HeaderHTML title="Sign In">
 </HeaderHTML>
 <body>
     <Header />
