--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -3,7 +3,7 @@ import Header from "../components/header.astro";
 import SignUp from "../components/signup";
 import HeaderHTML from "../layouts/HeaderHTML.astro";
 ---
-<HeaderHTML title="Aleatory Quote">
+<HeaderHTML title="Sign Up">
 </HeaderHTML>
 <body>
     <Header />
